# CPPPythonBindDeepLearning

./: CMakeLists.txt  README.md
NetworkTrainer/: CMakeLists.txt  NetworkTrainer.cpp  NetworkTrainer.h  TrainingEventsListener.cpp  TrainingEventsListener.h
NetworkTrainerCS/: CMakeLists.txt  NetworkTrainer.cpp  NetworkTrainer.h  NetworkTrainerCS.cpp  NetworkTrainerCS.h
main/: CMakeLists.txt  main.cpp  main.cs
modules/: trainModel.py
